--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 4-23 [【立此存照】付国豪离开环球时报的“真正原因”：入不敷出、患抑郁症](/articles/cdt/383397.md)
 
+4-23 [【网络民议】胡锡进：别人没房，很值得同情，至于你没房，纯属活该！](/articles/cdt/383398.md)
+
 4-22 [鱼眼观察｜要说不要脸，恒大完胜特斯拉](/articles/cdt/383401.md)
 
 4-22 [3号厅检票员工｜这事我们早该反思了](/articles/cdt/383403.md)
@@ -598,6 +600,4 @@
 3-22 [【CDT周报】第九期：白日一删尽，暗夜泪自流。欲穷清白目，请君入瓮楼。](/articles/cdt/384701.md)
 
 3-22 [【404文库】曹教授｜脱离人民群众的包子真的狗不理了](/articles/cdt/384707.md)
-
-3-21 [【立此存照 】奉旨翻墙：东风app（跨境交流专用通道）](/articles/cdt/384713.md)
 
