--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-23 [美国：与伊朗的核谈判存在重大分歧](/articles/voa/1041309.md)
+
 4-23 [拜登总统将亲赴欧洲参加北约峰会 对抗中俄挑战是首要议题](/articles/voa/1041310.md)
 
 4-23 [香港与新加坡推迟发布“旅行泡泡”计划](/articles/voa/1041311.md)
@@ -598,6 +600,4 @@
 4-10 [美国会议员促拜登以台湾替代孔子学院教学项目](/articles/voa/1041607.md)
 
 4-10 [中国力推数字人民币以撼动美元 但美联储仍然淡定](/articles/voa/1041608.md)
-
-4-10 [缅甸民选政府的驻联合国大使呼吁实施禁飞区和武器禁运](/articles/voa/1041609.md)
 
