--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+4-23 [世界第二大经济体接受多国援助  英国大删援助中国预算](/articles/rfa/1045788.md)
+
+4-23 [北京小汤山强拆现场突发：部分留守者遭便衣人员暴力驱逐  一人伤势严重](/articles/rfa/1045789.md)
+
 4-22 [加拿大允许引渡聆讯延期   孟晚舟将因此全身而退？](/articles/rfa/1045790.md)
 
 4-22 [成都秋雨圣约教会再遭冲击  多名教徒未成年子女被拘留](/articles/rfa/1045791.md)
@@ -596,8 +600,4 @@
 3-23 [中国有资格批评美国的种族问题吗？](/articles/rfa/1046086.md)
 
 3-23 [欧盟制裁中国侵犯新疆人权官员   中国愤怒并反制裁](/articles/rfa/1046087.md)
-
-3-23 [郑国成事件的启示：“五毛”也难逃中共迫害](/articles/rfa/1046088.md)
-
-3-23 [中国男足、男篮“互撕”    《吐槽大会》遭整改停播](/articles/rfa/1046089.md)
 
