--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+4-23 [涉中国“千人计划” 一博士化学师被判定犯有窃取商业秘密和经济间谍罪](/articles/voa/1041299.md)
+
+4-23 [全球气候峰会召开 - 气候政策学者对美中气候合作前景谨慎乐观](/articles/voa/1041300.md)
+
+4-23 [参议院通过旨在打击反亚裔仇恨犯罪的立法](/articles/voa/1041301.md)
+
+4-23 [英国议会通过动议 认定中国政府在新疆犯下种族灭绝罪](/articles/voa/1041302.md)
+
 4-23 [美国火星探测器开始制造氧气](/articles/voa/1041303.md)
 
 4-23 [美众议院以党派划线通过让首都华盛顿成为美国第51个州议案](/articles/voa/1041304.md)
@@ -592,12 +600,4 @@
 4-11 [乌克兰警告：俄罗斯或找借口入侵乌克兰东部地区](/articles/voa/1041597.md)
 
 4-10 [百岁中共何以忌惮赵紫阳而不怵毛夫人？](/articles/voa/1041598.md)
-
-4-10 [中国电视节目加入抵制国际品牌潮：满屏马赛克](/articles/voa/1041599.md)
-
-4-10 [俄罗斯加强对缅甸政变军方军售](/articles/voa/1041600.md)
-
-4-10 [香港“反送中”壁画洛杉矶落成](/articles/voa/1041601.md)
-
-4-10 [应对中国赶超 五角大楼2025年全面部署人工智能是关键](/articles/voa/1041602.md)
 
