--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-23 [布拉格与莫斯科纠纷加剧 捷克又宣布驱逐一批俄外交官](/articles/voa/1041297.md)
+
+4-23 [白宫要义: 拜登宣布成立全球气候金融计划；美中俄在气候上寻求合作契机](/articles/voa/1041298.md)
+
 4-23 [涉中国“千人计划” 一博士化学师被判定犯有窃取商业秘密和经济间谍罪](/articles/voa/1041299.md)
 
 4-23 [全球气候峰会召开 - 气候政策学者对美中气候合作前景谨慎乐观](/articles/voa/1041300.md)
@@ -596,8 +600,4 @@
 4-11 [缅甸安全部队两天内打死80人](/articles/voa/1041595.md)
 
 4-11 [媒体报俄疫苗死亡事件 波兰不用中国疫苗](/articles/voa/1041596.md)
-
-4-11 [乌克兰警告：俄罗斯或找借口入侵乌克兰东部地区](/articles/voa/1041597.md)
-
-4-10 [百岁中共何以忌惮赵紫阳而不怵毛夫人？](/articles/voa/1041598.md)
 
