--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-23 [英国会通过动议 认定中国在新疆实施种族灭绝](/articles/dw/1042840.md)
+
 4-22 [默克尔外交顾问黑克尔将任驻华大使?](/articles/dw/1042841.md)
 
 4-22 [德语媒体：促中国转型 拜登出新招](/articles/dw/1042842.md)
@@ -598,6 +600,4 @@
 4-5 [专家呼吁中国打击野生动物交易需要更多利器](/articles/dw/1043138.md)
 
 4-5 [德国人对政府愈加不信任 疫苗严重拖后腿](/articles/dw/1043139.md)
-
-4-5 [德国入侵80周年 希腊再提赔偿要求](/articles/dw/1043140.md)
 
