--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-23 [“生命太短暂”：男子突发心脏病后写“心灵鸡汤”走红网络](/articles/nyt/1046935.md)
+
 4-23 [香港媒体遭遇正面攻击，记者成为当局新目标](/articles/nyt/1046936.md)
 
 4-22 [“消失”的马云给中国富豪带来的启示](/articles/nyt/1046937.md)
@@ -598,6 +600,4 @@
 2-1 [简报：昂山素季被缅甸军方拘留；中国引领全球汽车业变革](/articles/nyt/1047233.md)
 
 2-1 [本尼·安德鲁斯：肖像与真实的人](/articles/nyt/1047234.md)
-
-2-1 [我们为什么永远需要手袋？](/articles/nyt/1047235.md)
 
