--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-23 [为享受更多婚假，台湾夫妇37天内结婚四次离婚三次](/articles/nyt/1046934.md)
+
 4-23 [“生命太短暂”：男子突发心脏病后写“心灵鸡汤”走红网络](/articles/nyt/1046935.md)
 
 4-23 [香港媒体遭遇正面攻击，记者成为当局新目标](/articles/nyt/1046936.md)
@@ -598,6 +600,4 @@
 2-1 [探索瑞典的冬日仙境](/articles/nyt/1047232.md)
 
 2-1 [简报：昂山素季被缅甸军方拘留；中国引领全球汽车业变革](/articles/nyt/1047233.md)
-
-2-1 [本尼·安德鲁斯：肖像与真实的人](/articles/nyt/1047234.md)
 
