--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-23 [端传媒 | 犯人栏里的记者蔡玉玲：每个人都可能被推上这个位置（节选）](/articles/cdt/383383.md)
+
 4-23 [【立此存照】付国豪离开环球时报的“真正原因”：入不敷出、患抑郁症](/articles/cdt/383397.md)
 
 4-23 [【网络民议】胡锡进：别人没房，很值得同情，至于你没房，纯属活该！](/articles/cdt/383398.md)
@@ -598,6 +600,4 @@
 3-22 [李强好书伴读｜野夫：从遮蔽的往事中找到一代人的苦衷](/articles/cdt/384700.md)
 
 3-22 [【CDT周报】第九期：白日一删尽，暗夜泪自流。欲穷清白目，请君入瓮楼。](/articles/cdt/384701.md)
-
-3-22 [【404文库】曹教授｜脱离人民群众的包子真的狗不理了](/articles/cdt/384707.md)
 
