--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-23 [美参议院通过反亚裔仇恨犯罪法案](/articles/dw/1042838.md)
+
 4-23 [美国：中国的胁迫使澳大利亚付出「巨大代价」](/articles/dw/1042839.md)
 
 4-23 [英国会通过动议 认定中国在新疆实施种族灭绝](/articles/dw/1042840.md)
@@ -598,6 +600,4 @@
 4-5 [德语媒体：欧盟向不公平竞争宣战](/articles/dw/1043136.md)
 
 4-5 [德国为何欲向印太地区派遣军舰？](/articles/dw/1043137.md)
-
-4-5 [专家呼吁中国打击野生动物交易需要更多利器](/articles/dw/1043138.md)
 
