--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-23 [谭德赛“失宠”？](/articles/voa/1041289.md)
+
 4-23 [美中在气候领域合作也能竞争 活动人士担心拜登忽视人权问题](/articles/voa/1041290.md)
 
 4-23 [美监管机构：电台/电视台必须披露外国政府或其代表租用频道信息](/articles/voa/1041291.md)
@@ -598,6 +600,4 @@
 4-12 [中国最高疾控官员承认中国产新冠疫苗保护率低](/articles/voa/1041587.md)
 
 4-12 [中共网信办开通热线举报“历史虚无”言论 严禁怀疑中共历史](/articles/voa/1041588.md)
-
-4-11 [伊朗纳坦兹核设施电网故障 一天前高效率铀浓缩离心机在该设施启动](/articles/voa/1041589.md)
 
