--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-23 [默克尔外交顾问黑克尔将任驻华大使](/articles/dw/1042836.md)
+
+4-23 [英国国会通过动议 认定中国在新疆实施种族灭绝](/articles/dw/1042837.md)
+
 4-23 [美参议院通过反亚裔仇恨犯罪法案](/articles/dw/1042838.md)
 
 4-23 [美国：中国的胁迫使澳大利亚付出「巨大代价」](/articles/dw/1042839.md)
@@ -596,8 +600,4 @@
 4-6 [美国伊朗「间接会谈」　核协议回得去吗?](/articles/dw/1043134.md)
 
 4-6 [中日外长通电话 北京暗讽「某个超级大国」](/articles/dw/1043135.md)
-
-4-5 [德语媒体：欧盟向不公平竞争宣战](/articles/dw/1043136.md)
-
-4-5 [德国为何欲向印太地区派遣军舰？](/articles/dw/1043137.md)
 
