--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-23 [全现在 | 动荡的四月新番：“先审后播”的影响绝不止于“弃B站”和“网盘见”](/articles/cdt/383380.md)
+
 4-23 [端传媒 | 犯人栏里的记者蔡玉玲：每个人都可能被推上这个位置（节选）](/articles/cdt/383383.md)
 
 4-23 [【立此存照】付国豪离开环球时报的“真正原因”：入不敷出、患抑郁症](/articles/cdt/383397.md)
@@ -598,6 +600,4 @@
 3-22 [极昼工作室｜庆阳少女坠楼后，一个父亲的日与夜](/articles/cdt/384696.md)
 
 3-22 [李强好书伴读｜野夫：从遮蔽的往事中找到一代人的苦衷](/articles/cdt/384700.md)
-
-3-22 [【CDT周报】第九期：白日一删尽，暗夜泪自流。欲穷清白目，请君入瓮楼。](/articles/cdt/384701.md)
 
