--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-23 [北京再发起新疆大外宣 意图指控海外维族人散播谣言](/articles/dw/1042835.md)
+
 4-23 [默克尔外交顾问黑克尔将任驻华大使](/articles/dw/1042836.md)
 
 4-23 [英国国会通过动议 认定中国在新疆实施种族灭绝](/articles/dw/1042837.md)
@@ -598,6 +600,4 @@
 4-6 [美日印澳法布局印太 中国海空演训压台湾](/articles/dw/1043133.md)
 
 4-6 [美国伊朗「间接会谈」　核协议回得去吗?](/articles/dw/1043134.md)
-
-4-6 [中日外长通电话 北京暗讽「某个超级大国」](/articles/dw/1043135.md)
 
