--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-23 [“你只能活一次”：疫情让千禧一代拥抱冒险经济](/articles/nyt/1046933.md)
+
 4-23 [为享受更多婚假，台湾夫妇37天内结婚四次离婚三次](/articles/nyt/1046934.md)
 
 4-23 [“生命太短暂”：男子突发心脏病后写“心灵鸡汤”走红网络](/articles/nyt/1046935.md)
@@ -598,6 +600,4 @@
 2-1 [通用汽车转型电动车，汽车业走向中国主导的未来](/articles/nyt/1047231.md)
 
 2-1 [探索瑞典的冬日仙境](/articles/nyt/1047232.md)
-
-2-1 [简报：昂山素季被缅甸军方拘留；中国引领全球汽车业变革](/articles/nyt/1047233.md)
 
