--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-23 [端传媒 | 明哥、阿诗、MLA：香港违禁歌手，和他们的中国粉丝（节选）](/articles/cdt/383377.md)
+
+4-23 [极昼工作室 | 一个三十三岁的女人第五次起诉离婚](/articles/cdt/383379.md)
+
 4-23 [全现在 | 动荡的四月新番：“先审后播”的影响绝不止于“弃B站”和“网盘见”](/articles/cdt/383380.md)
 
 4-23 [端传媒 | 犯人栏里的记者蔡玉玲：每个人都可能被推上这个位置（节选）](/articles/cdt/383383.md)
@@ -596,8 +600,4 @@
 3-23 [法律园地｜前记者张贾龙被寻衅滋事上诉案，经过两个多月不开庭审理作出宣判](/articles/cdt/384687.md)
 
 3-22 [【CDT推荐】本周推荐媒体](/articles/cdt/384694.md)
-
-3-22 [极昼工作室｜庆阳少女坠楼后，一个父亲的日与夜](/articles/cdt/384696.md)
-
-3-22 [李强好书伴读｜野夫：从遮蔽的往事中找到一代人的苦衷](/articles/cdt/384700.md)
 
