--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-23 [台湾国会维吾尔连线成立 吾尔开希吁让维族领袖入境](/articles/rfa/1045780.md)
+
 4-23 [中国提出 “东升西降”世界观    强调决不走西方宪政路](/articles/rfa/1045781.md)
 
 4-23 [凯迪关闭猫眼 猛批公知 “中国进入反智义和团时代”](/articles/rfa/1045782.md)
@@ -598,6 +600,4 @@
 3-24 [迅速制裁中国  加拿大对华政策不再瞻前顾后](/articles/rfa/1046078.md)
 
 3-23 [公开悼念六四、反对国安法     广东维权人士张五洲遭判刑](/articles/rfa/1046079.md)
-
-3-23 [美众议员致函拜登呼吁与台签自贸协议](/articles/rfa/1046080.md)
 
