--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-23 [COVID-19全球1亿4466万例确诊 逾307万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1031229.md)
+
+4-23 [中国、台湾在内 美第三大银行花旗宣布放弃13国零售消金市场 - 今日经济](/articles/rfi/1031230.md)
+
+4-23 [传美国拟对富人增税 亚股走势不一 – 法国国际广播电台 - RFI](/articles/rfi/1031231.md)
+
 4-23 [SpaceX发射成功 4宇航员正飞往国际空间站](/articles/rfi/1031232.md)
 
 4-23 [电脑晶片需求量大增 英特尔首季营收超出预期 – 法国国际广播电台 - RFI](/articles/rfi/1031233.md)
@@ -594,10 +600,4 @@
 4-19 [欧洲足球自创12超级俱乐部联盟 欧洲足联或祭最严惩罚](/articles/rfi/1031527.md)
 
 4-19 [电动汽车发展势头依然强劲 制造商纷纷公布乐观预测](/articles/rfi/1031528.md)
-
-4-19 [美国人瑞116岁辞世 长寿秘诀是好好生活](/articles/rfi/1031529.md)
-
-4-19 [德9月大选 绿党提名贝尔伯克为总理候选人 – 法国国际广播电台 - RFI](/articles/rfi/1031530.md)
-
-4-19 [纳瓦尼传命危  美国警告俄国恐面临后果 – 法国国际广播电台 - RFI](/articles/rfi/1031531.md)
 
