--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-23 [香港活动人士因持有爆炸品被判刑12年](/articles/voa/1041284.md)
+
 4-23 [英国国际学校撤出中国？ 网民酸、中国父母抢破头](/articles/voa/1041285.md)
 
 4-23 [中国外长希望东盟峰会帮助缅甸软着陆](/articles/voa/1041286.md)
@@ -598,6 +600,4 @@
 4-12 [缅甸裔美国人在中国大使馆外举行集会 维吾尔活动人士到场声援](/articles/voa/1041582.md)
 
 4-12 [美国气候特使克里预计将于下周访问中国](/articles/voa/1041583.md)
-
-4-12 [《无依之地》获英国电影学院奖最佳影片奖 赵婷获最佳导演奖](/articles/voa/1041584.md)
 
