--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-23 [德国之声｜长平观察：中国女权，“习大大”的奥秘](/articles/cdt/383372.md)
+
 4-23 [【CDTV】波特王 | 墙内文革2.0开始？连兔子也能被辱华（四月的粉红月报 下集）](/articles/cdt/383374.md)
 
 4-23 [端传媒 | 明哥、阿诗、MLA：香港违禁歌手，和他们的中国粉丝（节选）](/articles/cdt/383377.md)
@@ -598,6 +600,4 @@
 3-23 [文化先锋｜朱大可：三星堆文明的眼睛巫术——纵目神的崛起](/articles/cdt/384673.md)
 
 3-23 [洋流 | 带妈妈取节育环](/articles/cdt/384676.md)
-
-3-23 [南风窗｜大学生“涉黑”一审获刑3年6个月，一毕业就进了“黑社会”](/articles/cdt/384686.md)
 
