--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-24 [2020年中国基督徒惨遭迫害，从教堂到墓地 从生者到逝者](/articles/voa/1041279.md)
+
 4-23 [美日防务合作扩大，法国将在下月与日美举行联合军演](/articles/voa/1041280.md)
 
 4-23 [首款外国疫苗有望7月现身中国，什么样的人能“搞到”？](/articles/voa/1041281.md)
@@ -598,6 +600,4 @@
 4-12 [香港政府计划放宽出行限制 只面向疫苗接种人群](/articles/voa/1041577.md)
 
 4-12 [战狼外交之策略 专家：把民情转化为抵抗“外侮”的武器](/articles/voa/1041578.md)
-
-4-12 [伊朗指责以色列造成纳坦兹核设施停电](/articles/voa/1041579.md)
 
