--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-24 [流散海外港人拒绝被遗忘 呼吁积极保存身份持续推动国际线](/articles/voa/1041275.md)
+
+4-24 [拜登总统宣扬抗击气候变化的经济益处](/articles/voa/1041276.md)
+
+4-24 [香港民调: 10大政团评分全部不合格 国安法冲击泛民政党难凝聚民意](/articles/voa/1041277.md)
+
 4-24 [英情报官员警告：中国可能会主导关键技术控制全球操作系统](/articles/voa/1041278.md)
 
 4-24 [2020年中国基督徒惨遭迫害，从教堂到墓地 从生者到逝者](/articles/voa/1041279.md)
@@ -594,10 +600,4 @@
 4-12 [美中军舰相遇南中国海 地区紧张局势或加剧](/articles/voa/1041573.md)
 
 4-12 [昂山素季受到新指控 可能终身被禁止参政](/articles/voa/1041574.md)
-
-4-12 [阿里巴巴被罚后表态要降低电商进入平台门槛 香港股价涨幅超6%](/articles/voa/1041575.md)
-
-4-12 [昂山素季受到新指控 可能终身被禁止参政](/articles/voa/1041576.md)
-
-4-12 [香港政府计划放宽出行限制 只面向疫苗接种人群](/articles/voa/1041577.md)
 
