--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-24 [拜登称赞参议院通过打击反亚裔仇恨犯罪法案](/articles/voa/1041274.md)
+
 4-24 [流散海外港人拒绝被遗忘 呼吁积极保存身份持续推动国际线](/articles/voa/1041275.md)
 
 4-24 [拜登总统宣扬抗击气候变化的经济益处](/articles/voa/1041276.md)
@@ -598,6 +600,4 @@
 4-13 [美中军舰相遇南中国海 地区紧张局势或加剧](/articles/voa/1041572.md)
 
 4-12 [美中军舰相遇南中国海 地区紧张局势或加剧](/articles/voa/1041573.md)
-
-4-12 [昂山素季受到新指控 可能终身被禁止参政](/articles/voa/1041574.md)
 
