--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-24 [巴黎西南远郊周五发生恐怖袭击，一名女警察被害，杀手被击毙](/articles/rfi/1031208.md)
+
+4-24 [拜登与艾尔段通话 同意增进美国土耳其间合作关系 – 法国国际广播电台 - RFI](/articles/rfi/1031209.md)
+
 4-24 [新冠印度变种病毒 返比利时大学生群体确诊 曾取道巴黎](/articles/rfi/1031210.md)
 
 4-24 [来看看这四位宇航员啥背景](/articles/rfi/1031211.md)
@@ -596,8 +600,4 @@
 4-20 [欧盟外交首长控  俄国在乌克兰周边集结15万大军 – 法国国际广播电台 - RFI](/articles/rfi/1031506.md)
 
 4-20 [卢旺达大屠杀：新的调查报告确指法国负有重责](/articles/rfi/1031507.md)
-
-4-20 [德国是怎样寄希望于东南亚来绕开中国的？](/articles/rfi/1031508.md)
-
-4-20 [欧盟高官：希望就5G网络与印度合作以共同保护民主](/articles/rfi/1031509.md)
 
