--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-24 [【网络民议】全民吐槽五一调休：祝搞出小长假的人小长寿](/articles/cdt/383361.md)
+
 4-24 [【麻辣总局】“Whataboutism 你也一样”主义 动物庄园动画剧场](/articles/cdt/383364.md)
 
 4-24 [【立此存照】美军翘脚观辽宁舰恰展示出“人民海军对军力的自信”](/articles/cdt/383370.md)
@@ -598,6 +600,4 @@
 3-23 [【404文库】红星新闻｜独家对话”敲诈多名公职人员”女辅警父亲](/articles/cdt/384666.md)
 
 3-23 [【网络民议】外交部回应美欧加英制裁：终将为其愚蠢和傲慢付出代价](/articles/cdt/384667.md)
-
-3-23 [【麻辣总局】面对俄国女记者的提问 他掏出了自己的小本本儿](/articles/cdt/384672.md)
 
