--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-24 [加拿大总理夫妇接种AZ疫苗 带头示范安民心 – 法国国际广播电台 - RFI](/articles/rfi/1031194.md)
+
 4-24 [巴黎郊区爆割喉案 法国总统推文关切 – 法国国际广播电台 - RFI](/articles/rfi/1031195.md)
 
 4-24 [巴黎郊区警局爆割喉案 法检方朝恐攻侦办 – 法国国际广播电台 - RFI](/articles/rfi/1031196.md)
@@ -598,6 +600,4 @@
 4-20 [俄对谷歌提起反垄断诉讼      滥用YouTube主导地位](/articles/rfi/1031492.md)
 
 4-20 [纳瓦尔尼转送监狱医院        欧盟警告俄罗斯保其生命](/articles/rfi/1031493.md)
-
-4-20 [莫斯科布拉格互逐外交官](/articles/rfi/1031494.md)
 
