--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-24 [若绿党大选获胜，将会推行哪些新政？](/articles/dw/1042820.md)
+
+4-24 [《不割席》导演：北京的抵制反使该片获益](/articles/dw/1042821.md)
+
+4-24 [我们家族的纳粹史](/articles/dw/1042822.md)
+
 4-23 [意见相左 欧盟数据保护机构呼吁取缔人脸识别](/articles/dw/1042823.md)
 
 4-23 [德语媒体：撕毁“一带一路”协定 澳大利亚让习近平丢脸](/articles/dw/1042824.md)
@@ -594,10 +600,4 @@
 4-6 [德语媒体：捍卫人权不能含糊其辞](/articles/dw/1043118.md)
 
 4-6 [悼念欧元之父蒙代尔](/articles/dw/1043119.md)
-
-4-6 [疫情之下 谁意外发了大财？](/articles/dw/1043120.md)
-
-4-6 [中国航母去太平洋 美国航母进南海](/articles/dw/1043121.md)
-
-4-6 [朝鲜宣布不参加今夏东京奥运](/articles/dw/1043122.md)
 
