--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -21,6 +21,8 @@
 
 4-23 [端传媒 | 犯人栏里的记者蔡玉玲：每个人都可能被推上这个位置（节选）](/articles/cdt/383383.md)
 
+4-24 [【中国哭墙】所有缝隙都是光照进来的地方（4月19-24日，2021年）](/articles/cdt/383388.md)
+
 4-23 [【立此存照】付国豪离开环球时报的“真正原因”：入不敷出、患抑郁症](/articles/cdt/383397.md)
 
 4-23 [【网络民议】胡锡进：别人没房，很值得同情，至于你没房，纯属活该！](/articles/cdt/383398.md)
@@ -598,6 +600,4 @@
 3-23 [奇客资讯｜加速主义关键词遭遇有组织的水军污染和攻击](/articles/cdt/384662.md)
 
 3-23 [【404文库】红星新闻｜独家对话”敲诈多名公职人员”女辅警父亲](/articles/cdt/384666.md)
-
-3-23 [【网络民议】外交部回应美欧加英制裁：终将为其愚蠢和傲慢付出代价](/articles/cdt/384667.md)
 
