--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-24 [印度疫情水深火热 医疗系统濒临崩溃](/articles/dw/1042813.md)
+
 4-24 [印尼失踪潜艇氧气大限已过 军方称潜艇已沉没](/articles/dw/1042814.md)
 
 4-24 [“利大于弊” 美国宣布恢复使用强生疫苗](/articles/dw/1042815.md)
@@ -598,6 +600,4 @@
 4-7 [伊朗与世界大国就重启核协议进行「建设性」会谈](/articles/dw/1043111.md)
 
 4-7 [发推警告土耳其政治人物 网民挞伐中国大使](/articles/dw/1043112.md)
-
-4-7 [「血棉花」争议未解  国际奥会传与相关中企合作](/articles/dw/1043113.md)
 
