--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-24 [专访美国政治科学学者柯睿楷：谈习近平以反腐治国](/articles/voa/1041264.md)
+
 4-24 [拜登将在G7峰会上敦促盟友就中国强迫劳动采取行动](/articles/voa/1041265.md)
 
 4-24 [拜登敦促各国领导人在气候峰会后信守承诺](/articles/voa/1041266.md)
@@ -598,6 +600,4 @@
 4-13 [明尼苏达发生警察开枪打死黑人事件 拜登称抢劫与暴力“没有正当理由”](/articles/voa/1041562.md)
 
 4-13 [拜登与企业高管开会 把巨额基建方案与加强美国芯片制造联系在一起](/articles/voa/1041563.md)
-
-4-13 [欧盟：无法帮助黑山偿还其中国债务 但可提供融资完成修路](/articles/voa/1041564.md)
 
