--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-24 [高中生接受军训 分析：打不打仗都强调备战](/articles/voa/1041262.md)
+
+4-24 [印度疫情继续恶化，首都医院发出缺氧呼救](/articles/voa/1041263.md)
+
 4-24 [专访美国政治科学学者柯睿楷：谈习近平以反腐治国](/articles/voa/1041264.md)
 
 4-24 [拜登将在G7峰会上敦促盟友就中国强迫劳动采取行动](/articles/voa/1041265.md)
@@ -596,8 +600,4 @@
 4-13 [对话亚特兰大中国留学生：该在美国为种族不公发声吗？](/articles/voa/1041560.md)
 
 4-13 [专访共和党联邦众议员佩里谈中共：“你以为喂它能争取时间，但鳄鱼迟早会吃掉你”](/articles/voa/1041561.md)
-
-4-13 [明尼苏达发生警察开枪打死黑人事件 拜登称抢劫与暴力“没有正当理由”](/articles/voa/1041562.md)
-
-4-13 [拜登与企业高管开会 把巨额基建方案与加强美国芯片制造联系在一起](/articles/voa/1041563.md)
 
