--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-24 [邓炳强挺立“假新闻”法 港外国记者会促澄清疑问](/articles/dw/1042809.md)
+
+4-24 [忧“双重变种“ 德国将对印度实施严格旅行限制](/articles/dw/1042810.md)
+
 4-24 [新冠封锁令——德国演艺明星齐吐槽](/articles/dw/1042811.md)
 
 4-24 [德语媒体：强大的中国 是福也是祸](/articles/dw/1042812.md)
@@ -596,8 +600,4 @@
 4-7 [复苏曙光：澳大利亚和新西兰将开放免隔离旅行](/articles/dw/1043107.md)
 
 4-7 [拜登：全体美国公民本月就都能接种疫苗](/articles/dw/1043108.md)
-
-4-7 [香港法院审理831集结案 黎智英等人当庭认罪](/articles/dw/1043109.md)
-
-4-7 [等一下！我的麦克风！](/articles/dw/1043110.md)
 
