--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-25 [与中国有关谍案不断 又一俄科学家被判重刑](/articles/voa/1041260.md)
+
+4-24 [印尼发现失联潜艇碎片，认定舰上53名军人无生还希望](/articles/voa/1041261.md)
+
 4-24 [高中生接受军训 分析：打不打仗都强调备战](/articles/voa/1041262.md)
 
 4-24 [印度疫情继续恶化，首都医院发出缺氧呼救](/articles/voa/1041263.md)
@@ -596,8 +600,4 @@
 4-13 [田纳西一高中发生枪击事件 一人死亡 一名警察受伤](/articles/voa/1041558.md)
 
 4-13 [美国在不改变“一中”政策情况下鼓励与台湾建立更紧密关系](/articles/voa/1041559.md)
-
-4-13 [对话亚特兰大中国留学生：该在美国为种族不公发声吗？](/articles/voa/1041560.md)
-
-4-13 [专访共和党联邦众议员佩里谈中共：“你以为喂它能争取时间，但鳄鱼迟早会吃掉你”](/articles/voa/1041561.md)
 
