--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-25 [【旧闻重温】Humar：在中国当一个维吾尔人是什么样的体验？](/articles/cdt/383316.md)
+
+4-24 [Matters | 港人流亡日记：乡愁就是不能再一往如常](/articles/cdt/383324.md)
+
 4-24 [忽悠 | 福岛核废水事件的一些碎碎念](/articles/cdt/383337.md)
 
 4-24 [旧闻评论｜特斯拉的中国化之旅](/articles/cdt/383341.md)
@@ -596,8 +600,4 @@
 3-25 [玖奌杂货铺 | 方方兑现承诺，捐出日记全部稿酬](/articles/cdt/384604.md)
 
 3-25 [【异闻观止】新京报 | 多名艺人终止与H&M合作，央媒：岂能吃中国的饭、砸中国的锅](/articles/cdt/384607.md)
-
-3-25 [中式没品笑话百科｜中国人还能穿哪一套？](/articles/cdt/384610.md)
-
-3-24 [头牛关注｜某单位食堂菜价“泄密”，网友惊呼“长见识了”！](/articles/cdt/384612.md)
 
