--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 4-25 [【旧闻重温】Humar：在中国当一个维吾尔人是什么样的体验？](/articles/cdt/383316.md)
 
+4-25 [兽楼处 | 人生最后一刀](/articles/cdt/383319.md)
+
 4-24 [Matters | 港人流亡日记：乡愁就是不能再一往如常](/articles/cdt/383324.md)
 
 4-24 [忽悠 | 福岛核废水事件的一些碎碎念](/articles/cdt/383337.md)
@@ -598,6 +600,4 @@
 3-25 [【旧闻重温】杜绍斐 DUSHAOFEI | 血色棉花：用生命堆砌的6万亿白色帝国](/articles/cdt/384600.md)
 
 3-25 [玖奌杂货铺 | 方方兑现承诺，捐出日记全部稿酬](/articles/cdt/384604.md)
-
-3-25 [【异闻观止】新京报 | 多名艺人终止与H&M合作，央媒：岂能吃中国的饭、砸中国的锅](/articles/cdt/384607.md)
 
