--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-25 [东盟领导人就解决缅甸危机达成共识](/articles/voa/1041258.md)
+
 4-25 [习明泽个资泄露案二审宣判，牛腾宇14年刑期不变](/articles/voa/1041259.md)
 
 4-25 [与中国有关谍案不断 又一俄科学家被判重刑](/articles/voa/1041260.md)
@@ -598,6 +600,4 @@
 4-13 [美众议院司法委员会将审议奴隶制赔偿法案](/articles/voa/1041556.md)
 
 4-13 [布林肯任命前大使出任美国务院第一位首席多元化官](/articles/voa/1041557.md)
-
-4-13 [田纳西一高中发生枪击事件 一人死亡 一名警察受伤](/articles/voa/1041558.md)
 
