--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-25 [纽约州将恢复强生新冠疫苗的接种](/articles/voa/1041256.md)
+
+4-25 [伦敦万人游行，反对疫情封闭措施](/articles/voa/1041257.md)
+
 4-25 [东盟领导人就解决缅甸危机达成共识](/articles/voa/1041258.md)
 
 4-25 [习明泽个资泄露案二审宣判，牛腾宇14年刑期不变](/articles/voa/1041259.md)
@@ -596,8 +600,4 @@
 4-13 [美国国会审议拜登的两万亿基础建设支出计划](/articles/voa/1041554.md)
 
 4-13 [美国公布美台官方互动新准则后 台朝野关注高层首长能否访问华盛顿](/articles/voa/1041555.md)
-
-4-13 [美众议院司法委员会将审议奴隶制赔偿法案](/articles/voa/1041556.md)
-
-4-13 [布林肯任命前大使出任美国务院第一位首席多元化官](/articles/voa/1041557.md)
 
