--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 4-25 [兽楼处 | 人生最后一刀](/articles/cdt/383319.md)
 
+4-25 [后生价值 | 成为「悲伤同志」](/articles/cdt/383321.md)
+
 4-24 [Matters | 港人流亡日记：乡愁就是不能再一往如常](/articles/cdt/383324.md)
 
 4-24 [忽悠 | 福岛核废水事件的一些碎碎念](/articles/cdt/383337.md)
@@ -598,6 +600,4 @@
 3-25 [【网络民议】别支持新疆棉花了，请支持新疆人](/articles/cdt/384591.md)
 
 3-25 [【旧闻重温】杜绍斐 DUSHAOFEI | 血色棉花：用生命堆砌的6万亿白色帝国](/articles/cdt/384600.md)
-
-3-25 [玖奌杂货铺 | 方方兑现承诺，捐出日记全部稿酬](/articles/cdt/384604.md)
 
