--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-25 [拜登将推动七国集团制止中国强迫劳动](/articles/rfi/1031155.md)
+
+4-25 [德国通过新IT法 为禁止华为提供法律框架](/articles/rfi/1031156.md)
+
+4-25 [中美乒乓外交50年 基辛格该醒醒了？](/articles/rfi/1031157.md)
+
 4-25 [亚美尼亚大屠杀106周年 拜登正式宣告为种族灭绝 土耳其表示不满](/articles/rfi/1031158.md)
 
 4-25 [法国批准使用强生疫苗 下周开始逐步放宽限制措施](/articles/rfi/1031159.md)
@@ -594,10 +600,4 @@
 4-20 [王岐山博鳌开幕式自称为习近平“报幕” 有指战战兢兢？](/articles/rfi/1031453.md)
 
 4-20 [法国对来自巴西等4国的落地旅客周六起实施检疫隔离](/articles/rfi/1031454.md)
-
-4-20 [非政府组织吁各国 捐1546亿预防饥荒 – 法国国际广播电台 - RFI](/articles/rfi/1031455.md)
-
-4-20 [芯片短缺如芒刺在背 欧盟鼓励台湾厂商扩大投资  但旱情令台湾的压力陡增](/articles/rfi/1031456.md)
-
-4-20 [今为&quot;谷雨&quot; 联合国推定中文日](/articles/rfi/1031457.md)
 
