--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-25 [拜登将亚美尼亚大屠杀称为“种族灭绝”](/articles/ft/1045708.md)
+
 4-25 [特斯拉事件的另一种可能](/articles/ft/1045709.md)
 
 4-23 [从几个案例看英国外交向印太地区的倾斜](/articles/ft/1045710.md)
@@ -598,6 +600,4 @@
 2-23 [希腊呼吁欧盟尽快推出疫苗护照](/articles/ft/1046006.md)
 
 2-23 [Facebook将恢复展示澳大利亚新闻](/articles/ft/1046007.md)
-
-2-23 [沃尔顿家族是怎么“日进斗金”的？](/articles/ft/1046008.md)
 
