--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-25 [【旧闻重温】微博 | 我们分析了五万条种族歧视账号微博，发现了这些](/articles/cdt/383302.md)
+
 4-25 [美国之音｜“习近平家人信息泄露案” 二审宣判，牛腾宇14年刑期不变](/articles/cdt/383306.md)
 
 4-25 [【旧闻重温】Humar：在中国当一个维吾尔人是什么样的体验？](/articles/cdt/383316.md)
@@ -598,6 +600,4 @@
 3-25 [【404聊天室】《无依之地》在中国死而复生？电影审查有哪些敏感词？来聊聊中国电影审查的台前幕后，并可提前发问](/articles/cdt/384578.md)
 
 3-25 [三言财经｜耐克直播间小姐姐被骂哭：我得上班  安踏主播卖力嗓子喊哑](/articles/cdt/384579.md)
-
-3-25 [歪脑 | 谁拉黑了中国棉花？披着狼皮的新疆棉](/articles/cdt/384590.md)
 
