--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-25 [全球新冠疫苗接种超10亿](/articles/dw/1042800.md)
+
 4-25 [DW事实核查：关于新冠疫苗的四个迷思](/articles/dw/1042801.md)
 
 4-25 [加密货币全盘猛跌 个中缘由众说纷纭](/articles/dw/1042802.md)
@@ -598,6 +600,4 @@
 4-7 [福布斯公布亿万富豪榜  有钱人变得更富了！](/articles/dw/1043098.md)
 
 4-7 [埃尔多安会见欧盟领导人 女士只能靠边坐？](/articles/dw/1043099.md)
-
-4-7 [福布斯富人排行榜又出炉 特朗普猛跌300位](/articles/dw/1043100.md)
 
