--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-25 [千载难逢好商机 纽约州抢当下一个大麻重镇 – 法国国际广播电台 - RFI](/articles/rfi/1031139.md)
+
+4-25 [干预与政治宣传 对尼泊尔而言中国会是下一个印度吗？ - 法国报纸摘要](/articles/rfi/1031140.md)
+
 4-25 [ASEAN领袖吁终结军事暴力 缅甸影子政府：乐见 – 法国国际广播电台 - RFI](/articles/rfi/1031141.md)
 
 4-25 [香港选定大角嘴为中央驻港国家安全公署及附属设施](/articles/rfi/1031142.md)
@@ -596,8 +600,4 @@
 4-20 [俄罗斯星期二在黑海地区举行军事演习](/articles/rfi/1031437.md)
 
 4-20 [美驻俄大使将返国述职 – 法国国际广播电台 - RFI](/articles/rfi/1031438.md)
-
-4-20 [印度客机飞香港 机上至少53人染疫 – 法国国际广播电台 - RFI](/articles/rfi/1031439.md)
-
-4-20 [环时民调称疫情后中国年轻人看西方不再仰视 指平起平坐？](/articles/rfi/1031440.md)
 
