--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-25 [欧盟指责中国危害南中国海和平](/articles/voa/1041254.md)
+
 4-25 [中国考虑建立小行星防御系统](/articles/voa/1041255.md)
 
 4-25 [纽约州将恢复强生新冠疫苗的接种](/articles/voa/1041256.md)
@@ -598,6 +600,4 @@
 4-13 [推特冻结中国驻巴基斯坦外交官和驻悉尼领馆账号 一天后解封](/articles/voa/1041552.md)
 
 4-13 [医务人员奋力抗疫辛苦历程年度回顾](/articles/voa/1041553.md)
-
-4-13 [美国国会审议拜登的两万亿基础建设支出计划](/articles/voa/1041554.md)
 
