--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-25 [iOS更新将加强护隐私 可能影响网路广告生态 – 法国国际广播电台 - RFI](/articles/rfi/1031136.md)
+
+4-25 [巴格达COVID-19医院大火 死亡增至58人 – 法国国际广播电台 - RFI](/articles/rfi/1031137.md)
+
+4-25 [好莱坞传枪响 男子倒车撞警车遭击毙 – 法国国际广播电台 - RFI](/articles/rfi/1031138.md)
+
 4-25 [千载难逢好商机 纽约州抢当下一个大麻重镇 – 法国国际广播电台 - RFI](/articles/rfi/1031139.md)
 
 4-25 [干预与政治宣传 对尼泊尔而言中国会是下一个印度吗？ - 法国报纸摘要](/articles/rfi/1031140.md)
@@ -594,10 +600,4 @@
 4-21 [日本开发新冠病毒检测新方法 全球最快](/articles/rfi/1031434.md)
 
 4-20 [国际空间站将迎来法国指挥官](/articles/rfi/1031435.md)
-
-4-20 [拜登对台军售传第一笔自走炮 台湾希望购得远程空射巡航导弹](/articles/rfi/1031436.md)
-
-4-20 [俄罗斯星期二在黑海地区举行军事演习](/articles/rfi/1031437.md)
-
-4-20 [美驻俄大使将返国述职 – 法国国际广播电台 - RFI](/articles/rfi/1031438.md)
 
