--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-25 [拜登认可针对亚美尼亚人的暴行是种族灭绝](/articles/voa/1041253.md)
+
 4-25 [欧盟指责中国危害南中国海和平](/articles/voa/1041254.md)
 
 4-25 [中国考虑建立小行星防御系统](/articles/voa/1041255.md)
@@ -598,6 +600,4 @@
 4-13 [明尼苏达警察枪击事件后 抗议者违抗宵禁](/articles/voa/1041551.md)
 
 4-13 [推特冻结中国驻巴基斯坦外交官和驻悉尼领馆账号 一天后解封](/articles/voa/1041552.md)
-
-4-13 [医务人员奋力抗疫辛苦历程年度回顾](/articles/voa/1041553.md)
 
