--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-25 [印度冠状疫情惨烈 单日确诊近35万 新德里延长封锁](/articles/rfi/1031135.md)
+
 4-25 [iOS更新将加强护隐私 可能影响网路广告生态 – 法国国际广播电台 - RFI](/articles/rfi/1031136.md)
 
 4-25 [巴格达COVID-19医院大火 死亡增至58人 – 法国国际广播电台 - RFI](/articles/rfi/1031137.md)
@@ -598,6 +600,4 @@
 4-21 [研究：格陵兰极端融冰情况恐影响冰原储水能量 – 法国国际广播电台 - RFI](/articles/rfi/1031433.md)
 
 4-21 [日本开发新冠病毒检测新方法 全球最快](/articles/rfi/1031434.md)
-
-4-20 [国际空间站将迎来法国指挥官](/articles/rfi/1031435.md)
 
