--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+4-25 [中国产业链的三个趋势](/articles/ft/1045706.md)
+
+4-25 [拜登税改背后的新经济学思想](/articles/ft/1045707.md)
+
 4-25 [拜登将亚美尼亚大屠杀称为“种族灭绝”](/articles/ft/1045708.md)
 
 4-25 [特斯拉事件的另一种可能](/articles/ft/1045709.md)
@@ -596,8 +600,4 @@
 2-23 [国际学校排行榜中的五匹黑马](/articles/ft/1046004.md)
 
 2-23 [比特币狂热：投资风格“极致化”](/articles/ft/1046005.md)
-
-2-23 [希腊呼吁欧盟尽快推出疫苗护照](/articles/ft/1046006.md)
-
-2-23 [Facebook将恢复展示澳大利亚新闻](/articles/ft/1046007.md)
 
