--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-25 [美国之音 | 香港媒体新生态：恐惧笼罩着RTHK](/articles/cdt/383295.md)
+
 4-25 [【CDTV】BBC | 香港抗争纪录片《不割席》入围奥斯卡 导演：“很可惜典礼在香港遭审查”](/articles/cdt/383298.md)
 
 4-25 [【旧闻重温】微博 | 我们分析了五万条种族歧视账号微博，发现了这些](/articles/cdt/383302.md)
@@ -598,6 +600,4 @@
 3-26 [端传媒 | 后疫情时代的购房者：钱拿在手上就是贬值，太焦虑了（节选）](/articles/cdt/384543.md)
 
 3-26 [【404文库】不明飞行兔｜谈棉花](/articles/cdt/384558.md)
-
-3-25 [【404聊天室】《无依之地》在中国死而复生？电影审查有哪些敏感词？来聊聊中国电影审查的台前幕后，并可提前发问](/articles/cdt/384578.md)
 
