--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-25 [德绿党总理候选人敦促对俄中采取强硬立场](/articles/dw/1042797.md)
+
 4-25 [生日当天“一键三连” 中国海军“下饺子”](/articles/dw/1042798.md)
 
 4-25 [墙外文摘：中国歌迷怎样去爱404艺人？](/articles/dw/1042799.md)
@@ -598,6 +600,4 @@
 4-8 [云南再爆疫情 瑞丽市委书记突遭撤职](/articles/dw/1043095.md)
 
 4-8 [中国加大施压南海与台湾  美国发出警告](/articles/dw/1043096.md)
-
-4-8 [中德领导人通话 习近平：中欧关系面临各种挑战](/articles/dw/1043097.md)
 
