--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-25 [枪稿 | 为什么奥斯卡在2021年变成了这幅模样？](/articles/cdt/383294.md)
+
 4-25 [美国之音 | 香港媒体新生态：恐惧笼罩着RTHK](/articles/cdt/383295.md)
 
 4-25 [【CDTV】BBC | 香港抗争纪录片《不割席》入围奥斯卡 导演：“很可惜典礼在香港遭审查”](/articles/cdt/383298.md)
@@ -598,6 +600,4 @@
 3-26 [【旧闻重温】新华网｜新疆高校组织百万学生拾棉花引发各方争议](/articles/cdt/384542.md)
 
 3-26 [端传媒 | 后疫情时代的购房者：钱拿在手上就是贬值，太焦虑了（节选）](/articles/cdt/384543.md)
-
-3-26 [【404文库】不明飞行兔｜谈棉花](/articles/cdt/384558.md)
 
