--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-25 [苹果推14.5版本 或颠覆广告生态](/articles/rfi/1031121.md)
+
+4-25 [印度被Covid第二波疫情灾难场景淹没](/articles/rfi/1031122.md)
+
 4-25 [新疆10年 加拿大夫妇：那里像个巨大监狱](/articles/rfi/1031123.md)
 
 4-25 [印度疫情发烧 德国将提供紧急援助 – 法国国际广播电台 - RFI](/articles/rfi/1031124.md)
@@ -596,8 +600,4 @@
 4-21 [乍得总统代比战死     周五将举行国葬](/articles/rfi/1031419.md)
 
 4-21 [弗洛伊德审判案裁决：肖万被定罪](/articles/rfi/1031420.md)
-
-4-21 [美众院通过决议谴责北京侵蚀香港法治](/articles/rfi/1031421.md)
-
-4-21 [孟晚舟申请推迟最后听证](/articles/rfi/1031422.md)
 
