--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-25 [巴格达一家收治新冠肺炎病人的医院大火 至少82人丧生](/articles/voa/1041250.md)
+
 4-25 [“女权”运动者被噤声 生存空间日益紧缩](/articles/voa/1041251.md)
 
 4-25 [美日大戳痛处，中国为何轻轻放过？](/articles/voa/1041252.md)
@@ -598,6 +600,4 @@
 4-13 [菲律宾召见中国大使 对大批中国船只聚集南中国海表达“极度不满”](/articles/voa/1041548.md)
 
 4-13 [美日峰会在即，菅首相是否会明示对中战略?](/articles/voa/1041549.md)
-
-4-13 [日本政府批准福岛核废水入海排放 美中反应不同](/articles/voa/1041550.md)
 
