--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-26 [【404文库】二大爷｜付国豪的算计](/articles/cdt/383291.md)
+
 4-25 [枪稿 | 为什么奥斯卡在2021年变成了这幅模样？](/articles/cdt/383294.md)
 
 4-25 [美国之音 | 香港媒体新生态：恐惧笼罩着RTHK](/articles/cdt/383295.md)
@@ -598,6 +600,4 @@
 3-26 [王biubiu | 盲目抵制到最后都是中国人糟蹋中国人](/articles/cdt/384537.md)
 
 3-26 [【旧闻重温】新华网｜新疆高校组织百万学生拾棉花引发各方争议](/articles/cdt/384542.md)
-
-3-26 [端传媒 | 后疫情时代的购房者：钱拿在手上就是贬值，太焦虑了（节选）](/articles/cdt/384543.md)
 
