--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-26 [拜登认定亚美尼亚大屠杀为种族灭绝后 土耳其强烈反对并召见美国大使](/articles/voa/1041249.md)
+
 4-25 [巴格达一家收治新冠肺炎病人的医院大火 至少82人丧生](/articles/voa/1041250.md)
 
 4-25 [“女权”运动者被噤声 生存空间日益紧缩](/articles/voa/1041251.md)
@@ -598,6 +600,4 @@
 4-13 [香港计划立法规管破坏选举行为 煽惑他人投白票或废票属非法](/articles/voa/1041547.md)
 
 4-13 [菲律宾召见中国大使 对大批中国船只聚集南中国海表达“极度不满”](/articles/voa/1041548.md)
-
-4-13 [美日峰会在即，菅首相是否会明示对中战略?](/articles/voa/1041549.md)
 
