--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-26 [民调显示：美国民众对拜登执政三个月的评价大多有利](/articles/voa/1041247.md)
+
+4-26 [一对在新疆生活10多年的加拿大夫妇讲述他们的亲眼所见](/articles/voa/1041248.md)
+
 4-26 [拜登认定亚美尼亚大屠杀为种族灭绝后 土耳其强烈反对并召见美国大使](/articles/voa/1041249.md)
 
 4-25 [巴格达一家收治新冠肺炎病人的医院大火 至少82人丧生](/articles/voa/1041250.md)
@@ -596,8 +600,4 @@
 4-13 [台湾首艘万吨级两栖船坞登陆舰下水 应对中国的海上威胁](/articles/voa/1041545.md)
 
 4-13 [黎智英致信《苹果》员工 寄语同事“昂首站立”](/articles/voa/1041546.md)
-
-4-13 [香港计划立法规管破坏选举行为 煽惑他人投白票或废票属非法](/articles/voa/1041547.md)
-
-4-13 [菲律宾召见中国大使 对大批中国船只聚集南中国海表达“极度不满”](/articles/voa/1041548.md)
 
