--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,22 @@
 路透
 ------
 
+4-26 [路透测算的人民币中间价料贬至6.4886元附近 因欧元涨势加剧](/articles/reuters/1038844.md)
+
+4-26 [印尼搜救人员在海下850米发现断裂的失联潜艇 确认船员死亡](/articles/reuters/1038845.md)
+
+4-26 [印度总理莫迪称疫情“风暴”动摇全国 美英法德承诺迅速支援](/articles/reuters/1038846.md)
+
+4-26 [伊拉克巴格达COVID-19医院氧气罐爆炸起火 至少82人丧生](/articles/reuters/1038847.md)
+
+4-26 [澳洲国防部长称“不应低估”就台湾问题与中国产生冲突](/articles/reuters/1038848.md)
+
+4-26 [土耳其里拉逼近纪录低位 受央行鸽派言论和土美关系降温打击](/articles/reuters/1038849.md)
+
+4-26 [俄罗斯总统普京和美国总统拜登可能在6月会晤--俄新社](/articles/reuters/1038850.md)
+
+4-26 [东南亚国家称就结束缅甸危机达成共识](/articles/reuters/1038851.md)
+
 4-24 [东盟领导人就解决缅甸危机达成五点共识--外交消息人士](/articles/reuters/1038852.md)
 
 4-24 [独家：拜登将敦促G7盟国就新疆问题进一步对华施压--顾问](/articles/reuters/1038853.md)
@@ -584,20 +600,4 @@
 4-19 [宝马汽车计划2025年纯电动汽车占其中国市场销量的四分之一](/articles/reuters/1039142.md)
 
 4-19 [腾讯斥资500亿元推动“可持续社会价值创新” 马化腾：“只是投入的开始”](/articles/reuters/1039143.md)
-
-4-19 [宝马汽车计划2025年纯电动汽车占其中国市场销量的四分之一](/articles/reuters/1039144.md)
-
-4-19 [百度预计未来三至五年将可向100万辆汽车供应自动驾驶系统--高管](/articles/reuters/1039145.md)
-
-4-19 [广汽集团总经理称将在2024年后推出联合华为研发的自动驾驶汽车](/articles/reuters/1039146.md)
-
-4-19 [分析：美国对俄罗斯的新制裁并非一枪毙命 而是缓慢放血](/articles/reuters/1039147.md)
-
-4-19 [百度预计未来三至五年将可向100万辆汽车供应自动驾驶系统--高管](/articles/reuters/1039148.md)
-
-4-19 [广汽集团总经理称目标是到2035年电动汽车和混动汽车各占一半销售](/articles/reuters/1039149.md)
-
-4-19 [沃尔沃将向中国滴滴出行旗下自动驾驶公司提供测试用车](/articles/reuters/1039150.md)
-
-4-19 [中国3月对朝鲜出口额增至六个月高位 是前两个月总出口的近400倍](/articles/reuters/1039151.md)
 
