--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-26 [德国总理候选人希望对中国、俄罗斯采取更强硬的立场](/articles/voa/1041244.md)
+
+4-26 [印度每日感染近35万 美国提供新的援助](/articles/voa/1041245.md)
+
 4-26 [美国开始结束阿富汗军事任务](/articles/voa/1041246.md)
 
 4-26 [民调显示：美国民众对拜登执政三个月的评价大多有利](/articles/voa/1041247.md)
@@ -596,8 +600,4 @@
 4-14 [日德举行首次2+2会谈 讨论中国威胁 展开双边军事与情报合作](/articles/voa/1041542.md)
 
 4-14 [布林肯再访布鲁塞尔，乌克兰和阿富汗是焦点](/articles/voa/1041543.md)
-
-4-13 [专家称伊朗核设施遭打击或削弱伊朗的谈判地位](/articles/voa/1041544.md)
-
-4-13 [台湾首艘万吨级两栖船坞登陆舰下水 应对中国的海上威胁](/articles/voa/1041545.md)
 
