--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+4-26 [全球军费未受疫情影响 中国连26年增长](/articles/dw/1042792.md)
+
+4-26 [吁重视台海情势  澳防长强调军方做好准备](/articles/dw/1042793.md)
+
+4-26 [2020年全球军费上升  中国连续26年增长](/articles/dw/1042794.md)
+
+4-26 [澳大利亚防长聚焦台海 称不该忽视台湾问题](/articles/dw/1042795.md)
+
 4-25 [疫情如海啸 德国将向印度提供紧急援助](/articles/dw/1042796.md)
 
 4-25 [德绿党总理候选人敦促对俄中采取强硬立场](/articles/dw/1042797.md)
@@ -592,12 +600,4 @@
 4-8 [巴西疫情面临失控 科兴疫苗或成救星？](/articles/dw/1043090.md)
 
 4-8 [尴尬了！欧委会女主席访土没有C位](/articles/dw/1043091.md)
-
-4-8 [约旦国王：“叛乱告终“](/articles/dw/1043092.md)
-
-4-8 [贝多芬第九交响曲第三乐章](/articles/dw/1043093.md)
-
-4-8 [罗冠聪获英政治庇护 伦敦宣布高额助港人计划](/articles/dw/1043094.md)
-
-4-8 [云南再爆疫情 瑞丽市委书记突遭撤职](/articles/dw/1043095.md)
 
