--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+4-26 [秘鲁前总统接种中国疫苗 仍确诊染疫 – 法国国际广播电台 - RFI](/articles/rfi/1031097.md)
+
 4-26 [秘鲁前总统接种中国疫苗数月后确诊感染](/articles/rfi/1031098.md)
 
 4-26 [印度疫情恶化 佛奇：美国将考虑提供AZ疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1031099.md)
@@ -598,6 +600,4 @@
 4-21 [抖音伦敦儿童隐私诉讼案可能面临求偿数十亿英镑](/articles/rfi/1031395.md)
 
 4-21 [中国与美国将互派新大使 秦刚或接替崔天凯](/articles/rfi/1031396.md)
-
-4-21 [南韩慰安妇状告日本政府 首尔法院驳回 – 法国国际广播电台 - RFI](/articles/rfi/1031397.md)
 
