--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+4-26 [3月人民币名义有效汇率创五年新高 实际汇率则结束八连升--BIS](/articles/reuters/1038826.md)
+
 4-26 [中国股市带动亚股上扬 关注美联储和美国GDP](/articles/reuters/1038827.md)
 
 4-26 [赵婷凭借“无依之地”成为首位摘得奥斯卡最佳导演奖的亚裔女性](/articles/reuters/1038828.md)
@@ -598,6 +600,4 @@
 4-20 [美元急挫至六周低位 市场关注未来利率走势](/articles/reuters/1039124.md)
 
 4-20 [美股从纪录高位回落 特斯拉受无人驾驶汽车致命事故拖累下跌](/articles/reuters/1039125.md)
-
-4-19 [博鳌论坛：中国为“一带一路”国家提供融资的规模要适中 融资节奏要适度--胡晓炼](/articles/reuters/1039126.md)
 
