--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-26 [女权人士在中国互联网上遭遇封禁和攻击](/articles/nyt/1046929.md)
+
+4-26 [从香港、东非到加州：我家的全球疫苗接种故事](/articles/nyt/1046930.md)
+
 4-26 [赵婷再创历史，获奥斯卡最佳导演奖](/articles/nyt/1046931.md)
 
 4-23 [漫长而残酷的20年：一文详解阿富汗战争](/articles/nyt/1046932.md)
@@ -596,8 +600,4 @@
 2-1 [职业电竞淘金热：亚洲明星选手涌向美国](/articles/nyt/1047227.md)
 
 2-1 [缅甸军方发动政变，昂山素季被拘留](/articles/nyt/1047228.md)
-
-2-1 [冰箱战胜电视：俄罗斯经济低迷打破普京的爱国盾牌](/articles/nyt/1047229.md)
-
-2-1 [中国可能会是拜登的噩梦](/articles/nyt/1047230.md)
 
