--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-26 [拜登撤销中国电力设备入网禁令 美中技术脱钩从此更加谨慎？](/articles/voa/1041242.md)
+
 4-26 [华盛顿政治舞台和好莱坞影剧舞台的交集点](/articles/voa/1041243.md)
 
 4-26 [德国总理候选人希望对中国、俄罗斯采取更强硬的立场](/articles/voa/1041244.md)
@@ -598,6 +600,4 @@
 4-14 [中国债务重压黑山 各方势力角逐巴尔干让一带一路再成焦点](/articles/voa/1041540.md)
 
 4-14 [蓬佩奥上传菠萝干照片 今年或将访问台湾](/articles/voa/1041541.md)
-
-4-14 [日德举行首次2+2会谈 讨论中国威胁 展开双边军事与情报合作](/articles/voa/1041542.md)
 
