--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-26 [麦杰逊 | 关于特斯拉，说点你不知道的](/articles/cdt/383285.md)
+
 4-26 [真实故事计划｜在游戏里氪金的年轻人](/articles/cdt/383289.md)
 
 4-26 [【404文库】二大爷｜付国豪的算计](/articles/cdt/383291.md)
@@ -598,6 +600,4 @@
 3-26 [全现在 | 996，拦不住年轻人回到大厂](/articles/cdt/384535.md)
 
 3-26 [【异闻观止】环球网｜抵制HM的队伍里混进了坏人 警惕搞加速主义的力量](/articles/cdt/384536.md)
-
-3-26 [王biubiu | 盲目抵制到最后都是中国人糟蹋中国人](/articles/cdt/384537.md)
 
