--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-26 [印度严重「缺氧」 多国紧急协助抗疫](/articles/dw/1042790.md)
+
+4-26 [贝多芬第九交响曲第三乐章](/articles/dw/1042791.md)
+
 4-26 [全球军费未受疫情影响 中国连26年增长](/articles/dw/1042792.md)
 
 4-26 [吁重视台海情势  澳防长强调军方做好准备](/articles/dw/1042793.md)
@@ -596,8 +600,4 @@
 4-8 [欧洲药监局：阿斯利康疫苗利大于弊](/articles/dw/1043088.md)
 
 4-8 [美国南北战争纪念物可能变马桶？](/articles/dw/1043089.md)
-
-4-8 [巴西疫情面临失控 科兴疫苗或成救星？](/articles/dw/1043090.md)
-
-4-8 [尴尬了！欧委会女主席访土没有C位](/articles/dw/1043091.md)
 
