--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-26 [创造历史 赵婷获得奥斯卡最佳导演奖 中国官媒沉默](/articles/voa/1041241.md)
+
 4-26 [拜登撤销中国电力设备入网禁令 美中技术脱钩从此更加谨慎？](/articles/voa/1041242.md)
 
 4-26 [华盛顿政治舞台和好莱坞影剧舞台的交集点](/articles/voa/1041243.md)
@@ -598,6 +600,4 @@
 4-14 [时事大家谈: 承认有效性不高，中国新冠疫苗政策急转弯？](/articles/voa/1041539.md)
 
 4-14 [中国债务重压黑山 各方势力角逐巴尔干让一带一路再成焦点](/articles/voa/1041540.md)
-
-4-14 [蓬佩奥上传菠萝干照片 今年或将访问台湾](/articles/voa/1041541.md)
 
