--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+4-26 [一周世界舆论聚焦：中国正对世界展现诚意](/articles/ft/1045701.md)
+
 4-26 [大数据分析：国际社会对日本福岛核污水排放的反应](/articles/ft/1045702.md)
 
 4-26 [拜登和普京可能于6月举行会晤](/articles/ft/1045703.md)
@@ -598,6 +600,4 @@
 2-24 [FAA下令检查普惠引擎裂纹](/articles/ft/1045999.md)
 
 2-24 [刺激计划何时会变得过度？](/articles/ft/1046000.md)
-
-2-24 [为下一个黄金机遇布局](/articles/ft/1046001.md)
 
