--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-26 [从毛泽东到习近平](/articles/nyt/1046925.md)
+
 4-26 [《无依之地》与美国不该存在的恐惧](/articles/nyt/1046926.md)
 
 4-26 [“东方女侠”张伟丽：既不是民族英雄，也不是女权偶像](/articles/nyt/1046927.md)
@@ -598,6 +600,4 @@
 2-2 [昂山素季：一个堕落了的保护神](/articles/nyt/1047223.md)
 
 2-2 [六个关键问题，快速了解缅甸政变](/articles/nyt/1047224.md)
-
-2-2 [简报：缅甸恢复军事统治；拼多多事件引发对加班文化反思](/articles/nyt/1047225.md)
 
