--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-26 [指遭「中国背景人士」接触 议政平台筹组秘书周竖峰离港赴加以防失自由](/articles/rfi/1031082.md)
+
+4-26 [支联会未因国安法现退会潮：二退一进 明申请六四烛光集会 「消息」预先否决](/articles/rfi/1031083.md)
+
+4-26 [安东尼霍普金斯60年演艺生涯 演过上百种角色 – 法国国际广播电台 - RFI](/articles/rfi/1031084.md)
+
 4-26 [赵婷成奥斯卡史上首位女华裔最佳导演 《浪迹天地》夺三大奖 香港反修例纪录片失落最佳奖项](/articles/rfi/1031085.md)
 
 4-26 [新加坡香港旅游泡泡5/26上路 – 法国国际广播电台 - RFI](/articles/rfi/1031086.md)
@@ -594,10 +600,4 @@
 4-21 [亚洲股市普遍收黑 – 法国国际广播电台 - RFI](/articles/rfi/1031380.md)
 
 4-21 [欧洲12俱乐部超级联赛可能办不下去了](/articles/rfi/1031381.md)
-
-4-21 [欧盟达成临时协议 到2030年将温室气体净排放量减少55%](/articles/rfi/1031382.md)
-
-4-21 [习近平批人为“筑墙”、“脱钩”损人不利己 于博鳌再诺永不称霸](/articles/rfi/1031383.md)
-
-4-21 [英国女王今95寿庆](/articles/rfi/1031384.md)
 
