--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-26 [五角大楼：将动用授权范围内一切资源帮助印度抗击新冠疫情](/articles/voa/1041239.md)
+
 4-26 [领跑新一轮绿色经济 专家指美国比目标空泛的中国更可靠](/articles/voa/1041240.md)
 
 4-26 [创造历史 赵婷获得奥斯卡最佳导演奖 中国官媒沉默](/articles/voa/1041241.md)
@@ -598,6 +600,4 @@
 4-14 [南缅因州大学关闭孔子学院](/articles/voa/1041537.md)
 
 4-14 [各界回应港府拟禁各类查册 忧助长选举舞弊影响营商环境](/articles/voa/1041538.md)
-
-4-14 [时事大家谈: 承认有效性不高，中国新冠疫苗政策急转弯？](/articles/voa/1041539.md)
 
