--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-26 [哈萨克反中情绪升温   在野党联合抗议“一带一路”](/articles/rfa/1045770.md)
+
 4-25 [“奶茶联盟为自由”：泰缅港台人士旧金山集会  联手反对极权专制](/articles/rfa/1045771.md)
 
 4-24 [孙大午等高管被全数批捕  外加新罪名](/articles/rfa/1045772.md)
@@ -598,6 +600,4 @@
 3-24 [中共开动大外宣机器    油管突现大量视频宣扬新疆“美好生活”](/articles/rfa/1046068.md)
 
 3-24 [中国大肆宣传三星堆为“中华文化”  学界对起源仍高度分歧](/articles/rfa/1046069.md)
-
-3-24 [美国印太司令提名人阐述对华立场](/articles/rfa/1046070.md)
 
