--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-26 [中国防长访越南 越方称“不会跟风反中”](/articles/dw/1042785.md)
+
+4-26 [媒体：欧盟拟今夏向美国游客开放入境](/articles/dw/1042786.md)
+
+4-26 [评论：印度——一场灾难正在发生](/articles/dw/1042787.md)
+
 4-26 [亚裔电影人大放异彩   赵婷夺奥斯卡最佳导演奖](/articles/dw/1042788.md)
 
 4-26 [客座评论：美中新冷战是美苏冷战的1.5版](/articles/dw/1042789.md)
@@ -594,10 +600,4 @@
 4-8 [德语媒体：价值观之争不容中立](/articles/dw/1043083.md)
 
 4-8 [习近平默克尔通话 补救中欧关系？](/articles/dw/1043084.md)
-
-4-8 [缅甸驻英大使不得进使馆　伦敦爆发抗议活动](/articles/dw/1043085.md)
-
-4-8 [美国前副总统彭斯宣布写自传](/articles/dw/1043086.md)
-
-4-8 [白宫：没有和盟友讨论抵制北京冬奥](/articles/dw/1043087.md)
 
