--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-26 [海外维、藏、蒙及港人联合示威   促世界各国抵制北京冬奥会](/articles/rfa/1045768.md)
+
 4-26 [台湾长老教会遭港屏蔽 黄春生牧师叹香港已“内地化”](/articles/rfa/1045769.md)
 
 4-26 [哈萨克反中情绪升温   在野党联合抗议“一带一路”](/articles/rfa/1045770.md)
@@ -598,6 +600,4 @@
 3-24 [公开上海公务员餐厅饭菜价格被指“泄密” 网民被抓](/articles/rfa/1046066.md)
 
 3-24 [《理大围城》获选台湾国际纪录片影展开幕片 策展人：不要忘了香港](/articles/rfa/1046067.md)
-
-3-24 [中共开动大外宣机器    油管突现大量视频宣扬新疆“美好生活”](/articles/rfa/1046068.md)
 
