--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-26 [加拿大夫妇居新疆10年 感觉和维吾尔人同困大监狱 – 法国国际广播电台 - RFI](/articles/rfi/1031079.md)
+
+4-26 [道达尔：暂停莫三比克200亿美元天然气计画 – 法国国际广播电台 - RFI](/articles/rfi/1031080.md)
+
 4-26 [华航九位机师确诊新冠肺炎其中七成曾派飞美国安克拉治等地](/articles/rfi/1031081.md)
 
 4-26 [指遭「中国背景人士」接触 议政平台筹组秘书周竖峰离港赴加以防失自由](/articles/rfi/1031082.md)
@@ -596,8 +600,4 @@
 4-21 [习近平最终应拜登之邀出席气候峰会  两人首次同场 - 要闻解说](/articles/rfi/1031377.md)
 
 4-21 [古埃及“失落的黄金城市”：尘封三千年后重建天日 - 文化遗产](/articles/rfi/1031378.md)
-
-4-21 [美国弗洛伊德案：陪审团宣判前警员肖万杀人罪成立](/articles/rfi/1031379.md)
-
-4-21 [亚洲股市普遍收黑 – 法国国际广播电台 - RFI](/articles/rfi/1031380.md)
 
