--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-26 [格桑坚参：中共制造假班禅 为操控日后达赖喇嘛转世](/articles/rfa/1045767.md)
+
 4-26 [海外维、藏、蒙及港人联合示威   促世界各国抵制北京冬奥会](/articles/rfa/1045768.md)
 
 4-26 [台湾长老教会遭港屏蔽 黄春生牧师叹香港已“内地化”](/articles/rfa/1045769.md)
@@ -598,6 +600,4 @@
 3-24 [宁夏再现“合村并寺”大举措 近百座清真寺将关停拆除](/articles/rfa/1046065.md)
 
 3-24 [公开上海公务员餐厅饭菜价格被指“泄密” 网民被抓](/articles/rfa/1046066.md)
-
-3-24 [《理大围城》获选台湾国际纪录片影展开幕片 策展人：不要忘了香港](/articles/rfa/1046067.md)
 
