--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-26 [国际媒体聚焦赵婷:“改写奥斯卡历史的女性”](/articles/dw/1042782.md)
+
 4-26 [本届奥斯卡获奖的是……](/articles/dw/1042783.md)
 
 4-26 [切尔诺贝利核电站泄漏35年后](/articles/dw/1042784.md)
@@ -598,6 +600,4 @@
 4-9 [强化反制北京能力 美再推抗中法案](/articles/dw/1043080.md)
 
 4-8 [缅甸名模被捕 军政府通缉异议名人](/articles/dw/1043081.md)
-
-4-8 [疫情下的危机管理   台、英专家：信任是关键](/articles/dw/1043082.md)
 
