--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+4-26 [疫情冲击下全球军事开支继续增加  中国军费连续26年递增](/articles/rfi/1031077.md)
+
+4-26 [新冠疫情：法国小学重开 进入复杂的返校期](/articles/rfi/1031078.md)
+
 4-26 [加拿大夫妇居新疆10年 感觉和维吾尔人同困大监狱 – 法国国际广播电台 - RFI](/articles/rfi/1031079.md)
 
 4-26 [道达尔：暂停莫三比克200亿美元天然气计画 – 法国国际广播电台 - RFI](/articles/rfi/1031080.md)
@@ -596,8 +600,4 @@
 4-21 [印度媒体：抗疫药物生产缓慢　部份药厂停摆 – 法国国际广播电台 - RFI](/articles/rfi/1031375.md)
 
 4-21 [安哥拉暴雨引发洪患 首都至少14人死亡 – 法国国际广播电台 - RFI](/articles/rfi/1031376.md)
-
-4-21 [习近平最终应拜登之邀出席气候峰会  两人首次同场 - 要闻解说](/articles/rfi/1031377.md)
-
-4-21 [古埃及“失落的黄金城市”：尘封三千年后重建天日 - 文化遗产](/articles/rfi/1031378.md)
 
