--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-26 [英伊丽莎白号航母将于下月启程前往亚洲 加强印太安全关系](/articles/voa/1041236.md)
+
 4-26 [专访媒体人和旅行者朱诺：看缅甸动乱症结所在](/articles/voa/1041237.md)
 
 4-26 [中共军机扰台长期化 台朝野立委谈因应之道](/articles/voa/1041238.md)
@@ -598,6 +600,4 @@
 4-14 [纪念《台湾关系法》42周年 拜登总统派高级非官方代表团访台](/articles/voa/1041534.md)
 
 4-14 [审议供应链 美商务部向一家中国公司发出传票](/articles/voa/1041535.md)
-
-4-14 [美国联邦卫生官员建议暂停接种强生疫苗](/articles/voa/1041536.md)
 
