--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-26 [阿里巴巴之后 中国对美团进行反垄断调查](/articles/voa/1041234.md)
+
+4-26 [2020全球经济下滑 军费开支反增 中国连续第26年保持增长](/articles/voa/1041235.md)
+
 4-26 [英伊丽莎白号航母将于下月启程前往亚洲 加强印太安全关系](/articles/voa/1041236.md)
 
 4-26 [专访媒体人和旅行者朱诺：看缅甸动乱症结所在](/articles/voa/1041237.md)
@@ -596,8 +600,4 @@
 4-14 [白宫要义: 白宫: 美中气候合作仍关切人权，有信心保卫台海](/articles/voa/1041532.md)
 
 4-14 [分析: 美日首脑峰会 将对区域稳定传讯息](/articles/voa/1041533.md)
-
-4-14 [纪念《台湾关系法》42周年 拜登总统派高级非官方代表团访台](/articles/voa/1041534.md)
-
-4-14 [审议供应链 美商务部向一家中国公司发出传票](/articles/voa/1041535.md)
 
