--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-27 [香港和新加坡之间的“旅游气泡”计划下月启动](/articles/voa/1041232.md)
+
+4-27 [奥斯卡亚裔放异彩囊括三大奖项，赵婷感言“人之初 性本善”](/articles/voa/1041233.md)
+
 4-26 [阿里巴巴之后 中国对美团进行反垄断调查](/articles/voa/1041234.md)
 
 4-26 [2020全球经济下滑 军费开支反增 中国连续第26年保持增长](/articles/voa/1041235.md)
@@ -596,8 +600,4 @@
 4-14 [明尼苏达射杀非裔美国人事件的涉案警察辞职](/articles/voa/1041530.md)
 
 4-14 [布林肯：美国坚定支持乌克兰的主权和领土完整](/articles/voa/1041531.md)
-
-4-14 [白宫要义: 白宫: 美中气候合作仍关切人权，有信心保卫台海](/articles/voa/1041532.md)
-
-4-14 [分析: 美日首脑峰会 将对区域稳定传讯息](/articles/voa/1041533.md)
 
