--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-27 [澳大利亚新防长：“不应低估”台海冲突的可能性](/articles/voa/1041231.md)
+
 4-27 [香港和新加坡之间的“旅游气泡”计划下月启动](/articles/voa/1041232.md)
 
 4-27 [奥斯卡亚裔放异彩囊括三大奖项，赵婷感言“人之初 性本善”](/articles/voa/1041233.md)
@@ -598,6 +600,4 @@
 4-14 [特鲁多政府阻止美智库颁奖给蔡英文引发不满](/articles/voa/1041529.md)
 
 4-14 [明尼苏达射杀非裔美国人事件的涉案警察辞职](/articles/voa/1041530.md)
-
-4-14 [布林肯：美国坚定支持乌克兰的主权和领土完整](/articles/voa/1041531.md)
 
