--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-27 [英国情报主管吁西方国家采取行动  应对中国可能控制全球运算系统](/articles/rfa/1045764.md)
+
 4-27 [加中建交半世纪后   加拿大民间吁渥太华承认台湾为独立国家](/articles/rfa/1045765.md)
 
 4-26 [美舰长跷脚照入选中国海军建军纪念图辑](/articles/rfa/1045766.md)
@@ -598,6 +600,4 @@
 3-25 [抗议中国反制裁   欧盟多国传召中国派驻大使](/articles/rfa/1046062.md)
 
 3-25 [加拿大召回驻华大使  渥太华重新制定对华战略](/articles/rfa/1046063.md)
-
-3-24 [用疫苗夺台友邦？巴拉圭批评中国胁迫与台湾断交换疫苗](/articles/rfa/1046064.md)
 
