--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-27 [时事大家谈: 孙大午集团遭“满门抄斩”，所犯何罪？](/articles/voa/1041226.md)
+
+4-27 [美宇航局“机智号”第三次火星飞行成功 航速航程创纪录](/articles/voa/1041227.md)
+
 4-27 [香港各界关注记者查册被判罪成 忧港府收紧公司查册损金融中心声誉](/articles/voa/1041228.md)
 
 4-27 [赵婷成奥斯卡首位有色人种女性最佳导演](/articles/voa/1041229.md)
@@ -596,8 +600,4 @@
 4-14 [受美国制裁影响 台湾芯片公司断供天津飞腾](/articles/voa/1041524.md)
 
 4-14 [可平视美国了？美情报报告：中国是一个日益接近平等实力的竞争对手](/articles/voa/1041525.md)
-
-4-14 [美参院两党议员推法 拟加速审议维吾尔人庇护申请](/articles/voa/1041526.md)
-
-4-14 [美国9月11日前从阿富汗全部撤军](/articles/voa/1041527.md)
 
