--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+4-27 [啦啦队女生校外社媒骂脏话 学校管得着吗？美最高法院将要断案](/articles/voa/1041223.md)
+
+4-27 [白宫要义: 白宫: 未来两个月提供外国美制AZ疫苗，正协助印度取得氧气与新冠物资](/articles/voa/1041224.md)
+
+4-27 [警察肖文被定罪后 美司法部宣布对第二个警察局展开调查](/articles/voa/1041225.md)
+
 4-27 [时事大家谈: 孙大午集团遭“满门抄斩”，所犯何罪？](/articles/voa/1041226.md)
 
 4-27 [美宇航局“机智号”第三次火星飞行成功 航速航程创纪录](/articles/voa/1041227.md)
@@ -594,10 +600,4 @@
 4-14 [专访华裔美国律师王代时：谈家史和中共统治中国的历史](/articles/voa/1041521.md)
 
 4-14 [菅义伟访白宫在即 美国敦促日本公开支持台湾](/articles/voa/1041522.md)
-
-4-14 [拜登将在4月28日在国会联席会议讲话](/articles/voa/1041523.md)
-
-4-14 [受美国制裁影响 台湾芯片公司断供天津飞腾](/articles/voa/1041524.md)
-
-4-14 [可平视美国了？美情报报告：中国是一个日益接近平等实力的竞争对手](/articles/voa/1041525.md)
 
