--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-27 [安然居住很好 | 网信办辛苦了！一年处理违规信息超100亿条，每天约3千万条](/articles/cdt/383239.md)
+
+4-27 [二大爷BACK | 五味杂陈的小金人](/articles/cdt/383243.md)
+
 4-26 [【网络民议】当代苏联笑话：恭喜“那个女孩”的《有靠之天》获奖](/articles/cdt/383257.md)
 
 4-26 [后浪电影｜恭喜《有靠之天》，恭喜安东尼！](/articles/cdt/383263.md)
@@ -596,8 +600,4 @@
 3-27 [【CDT敏感词周报】第十七期：H&M、支持新疆人、YUEJIPENGCI、加速主义](/articles/cdt/384497.md)
 
 3-26 [有病要讀書plus｜抵制H&M的时候请你做个人](/articles/cdt/384499.md)
-
-3-26 [维权网｜北京外卖骑士联盟“盟主”、外卖小哥维权者陈国江的案情通报](/articles/cdt/384502.md)
-
-3-26 [【CDTV】波特王 | 三月粉红月报（上集）：中共通台计划？](/articles/cdt/384503.md)
 
