--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-27 [美最高法院受理家外自卫持枪权案](/articles/voa/1041218.md)
+
+4-27 [弗吉尼亚州大型接种中心外 人们期待疫苗后的生活](/articles/voa/1041219.md)
+
 4-27 [美国人口普查新数据出笼 南部和西部诸州将增加众议院席位](/articles/voa/1041220.md)
 
 4-27 [美国欢迎英国政府建立全球反腐败制裁机制](/articles/voa/1041221.md)
@@ -596,8 +600,4 @@
 4-15 [UN人权高级专员警告：缅甸或将出现叙利亚式的“全面冲突”](/articles/voa/1041516.md)
 
 4-14 [中资铜矿因未遵守环境标准被塞尔维亚政府喊停](/articles/voa/1041517.md)
-
-4-14 [台海紧张之际 美非官方代表团抵台 气候特使访中](/articles/voa/1041518.md)
-
-4-14 [时事大家谈: 夸大习时代粉饰文革十年，新版党史何以服众？](/articles/voa/1041519.md)
 
