--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-27 [国台办批民进党发言挑衅 蔡英文到底说了什么?](/articles/dw/1042774.md)
+
 4-26 [疫情下民怨飙升 印度令社媒删帖](/articles/dw/1042775.md)
 
 4-26 [救命的氧气怎可断掉？](/articles/dw/1042776.md)
@@ -598,6 +600,4 @@
 4-9 [声援民主运动 推特发布“奶茶联盟”专属表情符号](/articles/dw/1043072.md)
 
 4-9 [俄罗斯增兵乌克兰 默克尔吁普京克制](/articles/dw/1043073.md)
-
-4-9 [日本完成首例新冠康复患者活体肺移植手术](/articles/dw/1043074.md)
 
