--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-27 [埃尔多安要求拜登撤销有关亚美尼亚种族灭绝的宣布](/articles/voa/1041217.md)
+
 4-27 [美最高法院受理家外自卫持枪权案](/articles/voa/1041218.md)
 
 4-27 [弗吉尼亚州大型接种中心外 人们期待疫苗后的生活](/articles/voa/1041219.md)
@@ -598,6 +600,4 @@
 4-15 [中国出新招扩大影响 布达佩斯复旦分校项目遭激烈批评](/articles/voa/1041515.md)
 
 4-15 [UN人权高级专员警告：缅甸或将出现叙利亚式的“全面冲突”](/articles/voa/1041516.md)
-
-4-14 [中资铜矿因未遵守环境标准被塞尔维亚政府喊停](/articles/voa/1041517.md)
 
