--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-27 [纽约61岁中国移民遇袭，被多次踢踩头部伤情危重](/articles/nyt/1046923.md)
+
 4-27 [赵婷奥斯卡获奖消息在中国遭审查](/articles/nyt/1046924.md)
 
 4-26 [从毛泽东到习近平](/articles/nyt/1046925.md)
@@ -598,6 +600,4 @@
 2-3 [简报：异见人士郭飞雄失踪；贝佐斯将卸任亚马逊CEO](/articles/nyt/1047221.md)
 
 2-2 [卢比奥和伊万卡，一对“绝配”](/articles/nyt/1047222.md)
-
-2-2 [昂山素季：一个堕落了的保护神](/articles/nyt/1047223.md)
 
