--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-27 [拜登总统就任百天 将对国会发表演说](/articles/voa/1041215.md)
+
 4-27 [百老汇员工接种疫苗期待风华重现](/articles/voa/1041216.md)
 
 4-27 [埃尔多安要求拜登撤销有关亚美尼亚种族灭绝的宣布](/articles/voa/1041217.md)
@@ -598,6 +600,4 @@
 4-15 [日本最大蕃茄酱生产商停止从新疆采购蕃茄](/articles/voa/1041513.md)
 
 4-15 [拜登派代表团防台，中国在台海展开实弹演习](/articles/voa/1041514.md)
-
-4-15 [中国出新招扩大影响 布达佩斯复旦分校项目遭激烈批评](/articles/voa/1041515.md)
 
