--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-27 [香港活动人士忧: 入境条例限制出入境自由](/articles/dw/1042772.md)
+
 4-27 [中国封杀奥斯卡 赵婷变成「那个女孩」](/articles/dw/1042773.md)
 
 4-27 [国台办批民进党发言挑衅 蔡英文到底说了什么?](/articles/dw/1042774.md)
@@ -598,6 +600,4 @@
 4-9 [大型抓马现场！ 斯里兰卡选美冠军王冠当场被抢](/articles/dw/1043070.md)
 
 4-9 [美国田纳西州允许无证携枪](/articles/dw/1043071.md)
-
-4-9 [声援民主运动 推特发布“奶茶联盟”专属表情符号](/articles/dw/1043072.md)
 
