--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+4-27 [玖奌杂货铺｜开除清华大学跳舞的那几名女生，你脑子进水了吧？](/articles/cdt/383227.md)
+
 4-27 [【图说天朝】来看几张某APP敏感词后台的截图吧](/articles/cdt/383234.md)
 
 4-27 [自由亚洲 | 孙大午等高管被全数批捕 外加新罪名](/articles/cdt/383237.md)
@@ -598,6 +600,4 @@
 3-27 [老鱼吹牛皮 | “环球时报”，又欺负我们不懂英文？](/articles/cdt/384476.md)
 
 3-27 [新京报书评周刊 | 杨笠代言英特尔被下架：到底是谁在制造“男女对立”？](/articles/cdt/384478.md)
-
-3-27 [立场新闻 | 消息指 RTHK《铿锵集》等节目如未能过关被抽起](/articles/cdt/384481.md)
 
