--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+4-27 [因曾住土耳其遭三度逮捕 维吾尔男被判刑25年](/articles/dw/1042768.md)
+
+4-27 [别光看赵婷 这些华裔也曾闪耀奥斯卡](/articles/dw/1042769.md)
+
+4-27 [上海民眾翻牆賀趙婷得獎](/articles/dw/1042770.md)
+
 4-27 [专访：德国不会允许出现在中美之间二选一的局面](/articles/dw/1042771.md)
 
 4-27 [香港活动人士忧: 入境条例限制出入境自由](/articles/dw/1042772.md)
@@ -594,10 +600,4 @@
 4-9 [菲利普亲王辞世 与女王牵手走过大半世纪](/articles/dw/1043066.md)
 
 4-9 [菲利普亲王去世：一生甘做妻子“伴驾”](/articles/dw/1043067.md)
-
-4-9 [欧洲人权法院：强制接种疫苗不违反人权](/articles/dw/1043068.md)
-
-4-9 [中方指责美国“对外侵略造成严重人道主义灾难“](/articles/dw/1043069.md)
-
-4-9 [大型抓马现场！ 斯里兰卡选美冠军王冠当场被抢](/articles/dw/1043070.md)
 
