--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-27 [熟蛋返生反智惹群嘲 “谎”蛋映照出中国诈骗产业链](/articles/rfa/1045757.md)
+
 4-27 [国产电视机安卓系统无孔不入   暗藏搜集信息功能涵盖邻居](/articles/rfa/1045758.md)
 
 4-27 [赵婷获奖被中国屏蔽  更多的赵婷如地火般闪耀](/articles/rfa/1045759.md)
@@ -598,6 +600,4 @@
 3-25 [中国官媒掀抵制H&M浪潮 一场精心策划的完美风暴？](/articles/rfa/1046055.md)
 
 3-25 [美国会审查《全球马格尼茨基人权问责法》实施情况](/articles/rfa/1046056.md)
-
-3-25 [《自然》曝光造假论文“产业化”  大部分来自中国](/articles/rfa/1046057.md)
 
