--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+4-27 [OPEC+联合部长级监督委员会将提前一天开会 乐观看待需求](/articles/reuters/1038739.md)
+
+4-27 [中国国开及农发行发债试点面向境内外投资人直接招标 银行类机构影响较大](/articles/reuters/1038740.md)
+
+4-27 [美国汽车业将再次敦促国会解决“芯片荒”](/articles/reuters/1038741.md)
+
+4-27 [俄罗斯国防部长称美国和北约在欧洲的行动加剧了军事威胁--Ifax](/articles/reuters/1038742.md)
+
+4-27 [收盘续创逾七周新高 美指走向存分歧市场倾向做多人民币](/articles/reuters/1038743.md)
+
 4-27 [中国对包括印度的南亚国家参加抗击新冠会议持开放态度--外交部](/articles/reuters/1038744.md)
 
 4-27 [中国外交部称日本外交蓝皮书渲染中国威胁 中方坚决反对并提出严正交涉](/articles/reuters/1038745.md)
@@ -590,14 +600,4 @@
 4-21 [特斯拉车主上海车展维权风波发酵 公司深夜道歉并已成立专门处理小组](/articles/reuters/1039037.md)
 
 4-21 [欧盟监管机构发现罕见血栓或与强生疫苗有关联 但仍称疫苗裨益大于风险](/articles/reuters/1039038.md)
-
-4-21 [苹果推出采用自家芯片的新iPad Pro和纤薄iMac 迎合远程办公潮流](/articles/reuters/1039039.md)
-
-4-21 [华融国际称一季度扭亏为盈 公司为“华融系”境外债券最重要担保主体](/articles/reuters/1039040.md)
-
-4-21 [市场洞察：人民币时隔一个月重返6.5关口 要重新展开升值？](/articles/reuters/1039041.md)
-
-4-21 [路透测算的人民币中间价料开在6.5039元附近 较上日升64点](/articles/reuters/1039042.md)
-
-4-21 [习近平与印尼总统通电话 欢迎印尼扩大优质产品对华出口](/articles/reuters/1039043.md)
 
