--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 4-27 [【图说天朝】来看几张某APP敏感词后台的截图吧](/articles/cdt/383234.md)
 
+4-27 [【CDTV】赵婷校友在上海酒吧直播奥斯卡颁奖典礼 VPN线路被干扰](/articles/cdt/383235.md)
+
 4-27 [自由亚洲 | 孙大午等高管被全数批捕 外加新罪名](/articles/cdt/383237.md)
 
 4-27 [安然居住很好 | 网信办辛苦了！一年处理违规信息超100亿条，每天约3千万条](/articles/cdt/383239.md)
@@ -598,6 +600,4 @@
 3-28 [【旧闻重温】湖玛Humar | 如何幸存](/articles/cdt/384469.md)
 
 3-27 [老鱼吹牛皮 | “环球时报”，又欺负我们不懂英文？](/articles/cdt/384476.md)
-
-3-27 [新京报书评周刊 | 杨笠代言英特尔被下架：到底是谁在制造“男女对立”？](/articles/cdt/384478.md)
 
