--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+4-27 [扎克伯格和库克是如何成为敌人的](/articles/nyt/1046920.md)
+
+4-27 [中国推“延迟退休”应对老龄化，引发争议和反弹](/articles/nyt/1046921.md)
+
 4-27 [尹汝贞，韩国电影届的“米纳里”](/articles/nyt/1046922.md)
 
 4-27 [纽约61岁中国移民遇袭，被多次踢踩头部伤情危重](/articles/nyt/1046923.md)
@@ -596,8 +600,4 @@
 2-3 [普京并不像他看起来那么强大](/articles/nyt/1047218.md)
 
 2-3 [昂山素季与军方的权力游戏：缅甸的民主希望是如何破灭的](/articles/nyt/1047219.md)
-
-2-3 [异见人士郭飞雄赴美遇阻后失踪](/articles/nyt/1047220.md)
-
-2-3 [简报：异见人士郭飞雄失踪；贝佐斯将卸任亚马逊CEO](/articles/nyt/1047221.md)
 
