--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-27 [力拼碳中和 环保人士呼吁中国检讨海外煤电厂计划](/articles/voa/1041209.md)
+
 4-27 [台学者：台湾国际团结法案将为台湾的生存发展跨出一大步](/articles/voa/1041210.md)
 
 4-27 [美国贸易代表与药商商讨暂停疫苗专利保护 药商担心中俄受益](/articles/voa/1041211.md)
@@ -598,6 +600,4 @@
 4-15 [美国会议员要求国务卿评估中国与伊郎关系](/articles/voa/1041507.md)
 
 4-15 [明尼苏达布鲁克林中心涉枪击案警察面临非预谋杀人罪指控](/articles/voa/1041508.md)
-
-4-15 [菅义伟访美后旋即访印菲 - 分析: 东京与印菲合作将缓慢而渐进](/articles/voa/1041509.md)
 
