--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+4-27 [巴西卫生监管机构反对进口俄罗斯疫苗](/articles/rfi/1031012.md)
+
+4-27 [哥伦比亚境内暴力升温 今年首季逾2.7万人逃离家园 – 法国国际广播电台 - RFI](/articles/rfi/1031013.md)
+
+4-27 [全面清查华航机师又有六位血清抗体呈阳性](/articles/rfi/1031014.md)
+
 4-27 [英国航母下月启航印太 日防相：象征着日英关系进入新阶段](/articles/rfi/1031015.md)
 
 4-27 [世贸组织新总干事：以中国为目标的贸易改革难以成功](/articles/rfi/1031016.md)
@@ -594,10 +600,4 @@
 4-22 [中国特斯拉“从善如流” 提供行车数据 网民反应不一](/articles/rfi/1031310.md)
 
 4-22 [孟晚舟延后引渡听证庭诉获准](/articles/rfi/1031311.md)
-
-4-22 [美军在钓鱼岛周边进行军演](/articles/rfi/1031312.md)
-
-4-22 [恩比德远抛差点投进 太阳116比113险胜76人 – 法国国际广播电台 - RFI](/articles/rfi/1031313.md)
-
-4-22 [中国钚产能力速增 美军上将忧北京核武器激增](/articles/rfi/1031314.md)
 
