--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+4-27 [【网络民议】为什么有人看到出生率降低觉得很爽？](/articles/cdt/383219.md)
+
+4-27 [【404文库】麟阁经略｜若付国豪也会割“爱国韭菜”，就不用离开北京了](/articles/cdt/383225.md)
+
 4-27 [玖奌杂货铺｜开除清华大学跳舞的那几名女生，你脑子进水了吧？](/articles/cdt/383227.md)
 
 4-27 [【图说天朝】来看几张某APP敏感词后台的截图吧](/articles/cdt/383234.md)
@@ -596,8 +600,4 @@
 3-28 [品葱 | 本人亲身经历：南疆，一个真实的1984世界](/articles/cdt/384461.md)
 
 3-28 [【旧闻重温】大赦国际 | 一个新疆汉族人的告白：那是我永远回不去的故乡](/articles/cdt/384466.md)
-
-3-28 [【旧闻重温】湖玛Humar | 如何幸存](/articles/cdt/384469.md)
-
-3-27 [老鱼吹牛皮 | “环球时报”，又欺负我们不懂英文？](/articles/cdt/384476.md)
 
