--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+4-28 [切尔诺贝利核事故35年 乌克兰公布克格勃档案](/articles/voa/1041204.md)
+
+4-28 [日本外交蓝皮书：支持台湾参与世卫大会，担忧中国持续扩张军力](/articles/voa/1041205.md)
+
+4-28 [澳大利亚官员提醒民主国家：战争的鼓声已经敲响](/articles/voa/1041206.md)
+
+4-27 [中国气候应对的双标：国内承诺减排，国外大力扩排](/articles/voa/1041207.md)
+
 4-27 [中国3月工业企业利润同比增长近一倍 原材料价格上涨加大企业压力成本](/articles/voa/1041208.md)
 
 4-27 [力拼碳中和 环保人士呼吁中国检讨海外煤电厂计划](/articles/voa/1041209.md)
@@ -592,12 +600,4 @@
 4-15 [白宫要义: 拜登: 驻阿富汗美军使命已完成，撤军后更能专注应对中国等挑战](/articles/voa/1041502.md)
 
 4-15 [FBI局长国会作证：匿名者Q暴力潜力令人关切](/articles/voa/1041503.md)
-
-4-15 [众议院决议案谴责维吾尔人遭受的种族灭绝](/articles/voa/1041504.md)
-
-4-15 [白宫新冠疫情响应团队：暂停使用强生疫苗不会减缓疫苗接种](/articles/voa/1041505.md)
-
-4-15 [拜登：美国没有理由继续在阿富汗驻军](/articles/voa/1041506.md)
-
-4-15 [美国会议员要求国务卿评估中国与伊郎关系](/articles/voa/1041507.md)
 
