--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+4-28 [美国政府放松有关户外戴口罩的指导原则](/articles/voa/1041198.md)
+
+4-28 [香港警方指民阵涉违反社团条例 成员质疑有政治目的或铺排取缔](/articles/voa/1041199.md)
+
+4-28 [中国国安部发新规，强化反间谍意识，鼓励民众检举揭发](/articles/voa/1041200.md)
+
+4-28 [时事大家谈: 习近平长期执政下，中共是否会重蹈接班人危机？](/articles/voa/1041201.md)
+
 4-28 [美前总统奥巴马谴责缅甸军事政变，缅军政府：恢复稳定在前 考虑东盟建议在后](/articles/voa/1041202.md)
 
 4-28 [林郑月娥亲自披挂上阵 主持电视节目讨论“完善香港选举制度”](/articles/voa/1041203.md)
@@ -592,12 +600,4 @@
 4-15 [特鲁多阻挠颁奖蔡英文？站在台海关系平衡木上的加拿大](/articles/voa/1041496.md)
 
 4-15 [罕见并发症促使美国暂停使用强生疫苗](/articles/voa/1041497.md)
-
-4-15 [配合美国撤军 北约将撤走驻阿富汗部队](/articles/voa/1041498.md)
-
-4-15 [商业环境政治化 中国可能在砸自己的锅](/articles/voa/1041499.md)
-
-4-15 [涉1月6日冲击国会事件枪击致死案的警察不会被起诉](/articles/voa/1041500.md)
-
-4-15 [美报告提出应对中俄专制威胁策略，建议拜登政府制定国家民主战略](/articles/voa/1041501.md)
 
