--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-28 [百年党庆前  中共加码高校管控和红色教育](/articles/rfa/1045748.md)
+
 4-28 [疫情恶化的印度成美中外交新战场   美国略胜一筹](/articles/rfa/1045749.md)
 
 4-28 [深圳高层大换血    原来和这有关](/articles/rfa/1045750.md)
@@ -598,6 +600,4 @@
 3-26 [欧洲议员: 中国用民族主义经济施压  反言论自由](/articles/rfa/1046046.md)
 
 3-26 [广东东莞“专项整治”电动、摩托车  引发民众不满](/articles/rfa/1046047.md)
-
-3-26 [脸书：中国黑客利用恶意软件监控海外维吾尔人](/articles/rfa/1046048.md)
 
