--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-28 [泰国活动人士街头遭镇压后转向Clubhouse](/articles/voa/1041187.md)
+
 4-28 [美海军舰艇向伊朗攻击艇开火示警](/articles/voa/1041188.md)
 
 4-28 [让各界看清中俄的“有害行为” 美军多位高层将领联署呼吁解密情报](/articles/voa/1041189.md)
@@ -598,6 +600,4 @@
 4-15 [美中关系紧张 日本究竟何去何从](/articles/voa/1041485.md)
 
 4-15 [气候峰会前大企业寻求统一并基于市场的途径](/articles/voa/1041486.md)
-
-4-15 [美访团同赴两岸 学者：美中开展“新常态、三合一”关系](/articles/voa/1041487.md)
 
