--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-28 [大国梦魇：德国还有哪些「第三帝国」建筑](/articles/dw/1042754.md)
+
 4-28 [支持度创新低  林郑月娥《香港电台》开节目](/articles/dw/1042755.md)
 
 4-28 [媒体：北京调查蚂蚁集团快速IPO幕后推手](/articles/dw/1042756.md)
@@ -598,6 +600,4 @@
 4-10 [日本拟排福岛核废水入海 渔民强烈反弹](/articles/dw/1043052.md)
 
 4-10 [吉布提：经济薄弱  合作伙伴强大](/articles/dw/1043053.md)
-
-4-10 [制裁重创伊朗经济 中国填补市场空白](/articles/dw/1043054.md)
 
