--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-28 [“这是谋杀”：印度疫情失控，疾病和死亡无处不在](/articles/nyt/1046918.md)
+
 4-28 [麦香鱼，我理想中的“完美”快餐](/articles/nyt/1046919.md)
 
 4-27 [扎克伯格和库克是如何成为敌人的](/articles/nyt/1046920.md)
@@ -598,6 +600,4 @@
 2-3 [香港民主反对派的最后一道防线：区议员](/articles/nyt/1047216.md)
 
 2-3 [在仰光亲历缅甸政变](/articles/nyt/1047217.md)
-
-2-3 [普京并不像他看起来那么强大](/articles/nyt/1047218.md)
 
